--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   },
   "scripts": {
     "lint": "./node_modules/.bin/eslint . --fix",
-    "dev": "parcel ./src/index.html --port 3000 --no-cache",
+    "dev": "parcel ./src/index.html --port 3000 --no-cache --no-source-maps",
     "prebuild": "rm -rf ./dist/",
     "build": "parcel build ./src/index.html --no-content-hash --no-cache --public-url ./"
   },
