--- a/package.json
+++ b/package.json
@@ -37,18 +37,18 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "kind-of": "^6.0.3",
+    "parcel": "^2.12.0",
     "pre-commit": "^1.2.2",
-    "sass": "^1.26.9",
-    "vite": "^7.0.5"
+    "sass": "^1.26.9"
   },
   "dependencies": {
     "@parcel/service-worker": "^2.12.0"
   },
   "scripts": {
     "lint": "./node_modules/.bin/eslint . --fix",
-    "dev": "parcel ./src/index.html --port 3000 --no-cache --no-source-maps",
-    "prebuild": "rm -rf ./dist/",
-    "build": "parcel build ./src/index.html --no-content-hash --no-cache --public-url ./"
+    "dev": "vite --port 3000",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "pre-commit": [
     "lint"
